# pdf2dcm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  index.html  pdf2dcm.html  pyproject.toml  search.js
.github/: test.yml
.github/workflows/: build-doc.yml  codeql-analysis.yml  license-update.yml  release.yml  test.yml
pdf2dcm/: __init__.py  base.html  base.py  index.html  pdf2encaps.html  pdf2encaps.py  pdf2rgb.html  pdf2rgb.py  utils.html
pdf2dcm/utils/: index.html  uid.html  uid.py
tests/: conftest.py  pytest.ini  test_00_utils.py  test_01_base.py  test_02_pdfencaps.py  test_03_repersonalisation.py  test_04_rgbsc.py
tests/test_data/: CT_small_accession_number.dcm  CT_small_no_UID.dcm  CT_small_no_name.dcm
