[tool.poetry]
name = "pdf2dcm"
version = "0.2.1"
description = "A PDF to Dicom Converter"
authors = ["Abhijeet Parida <abhijeet.parida@tum.de>"]
license = "MIT"
repository = 'https://github.com/a-parida12/pdf2dcm'
readme = 'README.md'
keywords = ["dicom", "pdf", "pdf2dcm",  "pdf2dicom", "pydicom", "pdf2dicomRGB"]

[tool.poetry.dependencies]
python = "^3.8"
pydicom = "^2.2.2"
pdf2image = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
commitizen = "^2.20.3"
bandit = "^1.7.1"
pre-commit = "^2.17.0"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pdf2dcm/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"