[tool.poetry]
name = "pdf2dcm"
version = "0.5.0"
description = "A PDF to Dicom Converter"
authors = ["Abhijeet Parida <abhijeet.parida@tum.de>"]
license = "MIT"
repository = 'https://github.com/a-parida12/pdf2dcm'
homepage = "https://a-parida12.github.io/pdf2dcm/pdf2dcm/"
readme = 'README.md'
keywords = ["dicom", "pdf", "pdf2dcm",  "pdf2dicom", "pydicom", "pdf2dicomRGB"]

[tool.poetry.dependencies]
python = "^3.8"
pydicom = "^2.3.0"
pillow = ">=9.5,<11.0"
pdf2image = "^1.16.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^4.0.1"
commitizen = "^3.2.1"
bandit = "^1.7.5"
pre-commit = "^3.3.1"
pytest-cov = "^4.0.0"
pdoc = "^14.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pdf2dcm/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
